[package]
name = "nebula-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.7"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
deadpool-redis = "0.22.0"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
mockall = "0.13.1"
redis = { version = "0.32.7", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
